fix word-wrap on long event descriptions

--- a/app/events/events.scss
+++ b/app/events/events.scss
@@ -139,6 +139,9 @@
       font-weight: 500;
     }
   }
+  #event-comment {
+    white-space: normal;
+  }
   .ng-leave-active {
     display: none; // TODO: Figure out why the old events stick around.
   }
